# capella-model-explorer

./: .buildinfo  .commitlintrc.yml  .dockerignore  .git_commit_template  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .prettierrc.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  entrypoint.sh  genindex.html  index.html  objects.inv  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-test-publish.yml  commit-check.yml  docs.yml  lint.yml  push-docker-image.yml
_sources/: index.rst.txt
_sources/code/: capella_model_explorer.rst.txt  modules.rst.txt
_static/: copybutton.js
capella_model_explorer/: __init__.py  __main__.py  app.py  components.py  constants.py  core.py  demo.py  explorer.py  icons.py  inline-dark-mode.js  main.py  package-lock.json  package.json  reports.py  sitegen.py  state.py  templates.py  types.py
capella_model_explorer/backend/: __main__.py  explorer.py  main.py  makers.py  model_diff.py  routes.py  state.py  templates.py
capella_model_explorer/frontend/: package-lock.json  package.json  tailwind.config.js
capella_model_explorer/frontend/.storybook/: preview.js
capella_model_explorer/frontend/src/: App.jsx
capella_model_explorer/frontend/src/components/: Card.jsx  Header.jsx  InstanceView.jsx  Lightbox.jsx  TemplateCard.jsx  TemplateDetails.jsx  TemplatesList.jsx  WiredTemplatesList.jsx
capella_model_explorer/frontend/src/stories/: TemplateCard.stories.js  TemplatesList.stories.js  WiredTemplatesList.stories.js
capella_model_explorer/stories/: ObjectList.stories.js
code/: capella_model_explorer.html  modules.html
docs/source/: conf.py
frontend/: .eslintrc.cjs  .gitignore  .prettierrc.cjs  .prettierrc.js  README.md  app.js  eslint.config.js  fetch-version.py  htmx.js  index.html  input.css  mdui-tailwind.css  mdui-theme.css  package-lock.json  package.json  postcss.config.cjs  postcss.config.js  tailwind.config.js  vite.config.js
frontend/.storybook/: main.js  preview.js
frontend/public/static/: env.js
frontend/src/: APIConfig.js  App.css  App.jsx  index.css  main.jsx
frontend/src/components/: AppInfo.jsx  Badge.jsx  Breadcrumbs.jsx  Breadcrumps.jsx  Button.jsx  Card.jsx  CommitInformation.jsx  DiffExplorer.jsx  DiffView.jsx  Header.jsx  HomeIcon.jsx  InstanceView.jsx  Lightbox.jsx  LightboxButton.jsx  ModelDiff.jsx  ObjectList.jsx  SVGDisplay.jsx  SettingsMenu.jsx  SidebarIcon.jsx  SoftwareVersion.jsx  Spinner.jsx  TemplateCard.jsx  TemplateDetails.jsx  TemplateView.jsx  TemplatesList.jsx  ThemeSwitcher.jsx  ViewsList.jsx  WiredTemplatesList.jsx
frontend/src/stories/: ObjectList.stories.js  Spinner.stories.js  TemplateCard.docs.mdx  TemplateCard.stories.js  TemplatesList.stories.js  ViewsList.stories.js  WiredTemplatesList.stories.js
frontend/src/views/: HomeView.jsx  ModelComparisonView.jsx  TemplateView.jsx
static/: README.md  main.css
static/css/: input.css
static/js/: diagramViewer.js  model_object_list.js  plotly-3.0.0.min.js.license  select-model-element-by-uuid.js  tailwind-3.4.15.js  theme.js  typography.min.js
templates/: README.md  __generic__.html.j2  __generic__.yaml  classes.html.j2  classes.yaml  common_macros.html.j2  diagrams.html.j2  diagrams.yaml  exchange-item.yaml  functional-chain.html.j2  functional.html.j2  index.yaml  logical-component.html.j2  logical-component.yaml  model-diff.html.j2  object_comparison.html.j2  object_diff.html.j2  operational-activity.html.j2  operational-activity.yaml  operational-capability.html.j2  operational-capability.yaml  operational-entity.html.j2  operational-entity.yaml  physical-component.yaml  physical-link.html.j2  physical-link.yaml  req.html.j2  req.yaml  system-actor.yaml  system-capability.html.j2  system-capability.yaml  system-definition.html.j2  system-definition.yaml  system-interface.html.j2  system-interface.yaml  system_capability.html.j2  system_capability.j2.html  system_capability.yaml  system_function.html.j2  system_function.yaml
templates/10-Operational Analysis/: index.toml  index.yaml  operational-activity.html.j2  operational-capability.html.j2  operational-entity.html.j2  operational-process.html.j2
templates/20-System Analysis/: index.toml  index.yaml  mod-rules-compliance.html.j2  system-actor.html.j2  system-capability.html.j2  system-definition.html.j2  system-interface.html.j2  system_function.html.j2
templates/30-Logical Architecture/: FIS.html.j2  index.toml  index.yaml  logical-capability.html.j2  logical-component.html.j2  logical-function.html.j2  logical-interface.html.j2  logical-state.html.j2
templates/40-Physical Architecture/: index.toml  index.yaml  phy-component.html.j2  physical-capability.html.j2  physical-component.html.j2  physical-function.html.j2  physical-link.html.j2  sw-interface.html.j2
templates/80-Cross-cutting/: classes.html.j2  diagrams.html.j2  exchange-item.html.j2  functional-chain.html.j2  index.toml  index.yaml  region.html.j2
templates/90-Other/: __generic__.html.j2  index.toml  index.yaml  object_comparison.html.j2  req.html.j2
templates/cross-cutting/: classes.html.j2  diagrams.html.j2  exchange-item.html.j2  index.yaml  region.html.j2
templates/logical-architecture/: FIS.html.j2  index.yaml  logical-component.html.j2  logical-function.html.j2  logical-interface.html.j2  logical-state-machine.html.j2  logical-state.html.j2
templates/operational-analysis/: index.yaml  operational-activity.html.j2  operational-capability.html.j2  operational-entity.html.j2
templates/physical-architecture/: index.yaml  phy-component.html.j2  physical-function.html.j2  physical-link.html.j2  sw-interface.html.j2
templates/system-analysis/: index.yaml  mod-rules-compliance.html.j2  system-actor.html.j2  system-capability.html.j2  system-definition.html.j2  system-interface.html.j2  system_function.html.j2
tests/: test_capella_model_explorer.py  test_cli.py  test_index.yaml  test_metrics.py
